--- a/404.html
+++ b/404.html
@@ -46,8 +46,8 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" /><link rel="stylesheet" href="https://newlooper.github.io/css/syntax.css" /><link rel="stylesheet" href="https://newlooper.github.io/css/codeblock.css" /><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.2/photoswipe.min.css" integrity="sha384-h/L2W9KefUClHWaty3SLE5F/qvc4djlyR4qY3NUV5HGQBBW7stbcfff1+I/vmsHh" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.2/default-skin/default-skin.min.css" integrity="sha384-iD0dNku6PYSIQLyfTOpB06F2KCZJAKLOThS5HRe8b3ibhdEQ6eKsFf/EeFxdOt5R" crossorigin="anonymous"><style>
 .container {
-    width: 1400px;
-    min-width: 1400px;
+    width: 1500px;
+    min-width: 1500px;
 }
 article.blog-post {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -77,6 +77,25 @@ article.blog-post blockquote {
     background-color: rgba(248,245,236,.6);
     border-left: 5px solid #eee;
     box-shadow: 1px 1px 2px rgba(0,0,0,.125);
+}
+aside.toc {
+    float: right;
+    padding: 6px;
+    padding-right: 20px;
+    margin: 0;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    border: solid 1px #d3d3d3;
+    font-size: 12px;
+}
+
+aside.toc ul {
+    padding-inline-start: 20px;
+    list-style: circle;
+}
+
+aside.toc a {
+    color: #666;
 }
 </style>
 
