--- a/en/404.html
+++ b/en/404.html
@@ -46,9 +46,10 @@
   </head>
   
   
+  
     
   
-  <body data-code="7" data-lines="false" id="documentTop">
+  <body data-code="200" data-lines="true" id="documentTop">
 
 <header class="nav_header" >
   <nav class="nav"><a href='/en/' class="nav_brand nav_item" title="My Hugo Site">
